# harness-starter

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.local.md.example  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.agent-harness/: current-task.md  init-summary.md  lessons.md  memory-index.md  project.json  task-log.md
.agent-harness/references/: ABSTRACT.md  OVERVIEW.md  accessibility-checklist.md  requirement-mapping-checklist.md  security-checklist.md
.claude/: settings.json
.claude/commands/: adr.md  agent-design-check.md  brainstorm.md  careful.md  compound.md  cso.md  debug.md  digest-meeting.md  dispatch-agents.md  doc-release.md  draft-doc.md  evolve.md  execute-plan.md  finish-branch.md  git-commit.md  health.md  ideate.md  lfg-doc.md  lfg-slide.md  lfg.md  lint-lessons.md  multi-review.md  plan-check.md  pressure-test.md  process-notes.md  recall.md  receive-review.md  request-review.md  retro.md  review-doc.md  source-verify.md  spec.md  squad.md  subagent-dev.md  tdd.md  team-doc.md  team-implement.md  team-review.md  team-spec.md  todo.md  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
docs/: agent-harness-workflow.md  architecture.md  product.md  quickstart.md  release.md  runbook.md  usage-guide.md  usage-manual.md  workflow.md
examples/: init-config.example.json
presets/: backend-service.json  cli-tool.json  data-pipeline.json  library.json  monorepo.json  web-app.json  worker.json
scripts/: apply_upgrade.py  assess_project.py  check_repo.py  discover_project.py  dogfood.py  init_project.py  plan_upgrade.py  sync_superpowers.py
tests/: _git_helper.py  test_agent.py  test_apply_upgrade.py  test_assessment.py  test_audit.py  test_check_repo.py  test_cli.py  test_digest_meeting.py  test_directory_maps.py  test_discovery.py  test_doc_scenario_scaffold.py  test_git_env_isolation.py  test_gsd_absorb.py  test_hooks.py  test_init_script.py  test_initializer.py  test_lang_detect.py  test_lessons_conflict_resolution.py  test_lfg_audit.py  test_lfg_context_degradation.py  test_lfg_coverage.py  test_lfg_gap_fixes.py  test_lfg_simplicity_absorption.py  test_lfg_squad_channel.py  test_memory.py  test_memory_search.py  test_merge3.py  test_pressure_test_absorb.py  test_project_type_rules.py  test_project_types.py  test_references.py  test_resolve_answers.py  test_router.py  test_runtime_bin.py  test_runtime_bin_squad.py  test_scaffold_cmd.py  test_scaffold_git.py  test_security.py  test_skills_registry.py  test_slide_deck_scenario_scaffold.py  (+10 more)
(+247 files in other folders)
