[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-harness-framework"
version = "0.1.0"
description = "A framework that discovers project context and initializes Codex/Claude Code harness files."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]

[tool.setuptools.packages.find]
where = ["src"]
