[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-harness-framework"
version = "0.1.0"
description = "A framework that discovers project context and initializes Codex/Claude Code harness files."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = ["questionary>=2.0", "rich>=13.0", "pyyaml>=6.0"]

[project.scripts]
harness = "agent_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_harness = [
    "templates/**/*",
    "presets/**/*",
    "VERSION",
]
